feat: add docx text sandbox conversion